Rebranded Site to watermelon, updated style to match.

--- a/index.html
+++ b/index.html
@@ -13,23 +13,21 @@
 <body>
 
     <div class="hero">
-        <h1>Bacon Website</h1>
+        <h1>Watermelon Website</h1>
 
         <p id="intro">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ad atque cum ea eos est illo, iste, nemo neque obcaecati
-            odit quam quis ratione rem repellendus similique tempore totam ullam voluptate?
+            Welcome to my watermelon site!
         </p>
     </div>
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at cumque deleniti eos facilis id, inventore laborum maiores molestias possimus quidem reprehenderit? Esse fugiat labore omnis perferendis velit!
+        As you may know, watermelon is amazing. Watermelon holds many health benefits as well as just tasting plain awesome!
     </p>
 
     <ul>
-        <li class="link"><a href="https://en.wikipedia.org/wiki/Bacon">Bacon Wiki</a></li>
-        <li class="link"><a href="https://baconjs.github.io/">Bacon Js</a></li>
-        <li class="link"><a href="https://www.google.com/search?q=bacon&oq=bacon&aqs=chrome.0.35i39j46i131i433i512j69i59j0i131i433i512j46i175i199i512j69i60l3.1637j0j4&sourceid=chrome&ie=UTF-8">Bacon Google</a></li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Watermelon">Watermelon Wiki</a></li>
+        <li class="link"><a href="https://www.webmd.com/diet/ss/slideshow-health-benefits-of-watermelon">Watermelon WebMD</a></li>
+        <li class="link"><a href="https://www.google.com/search?gs_ssp=eJzj4tDP1TfILihMMWB0YPDiKk8sSS3KTc3JzwMAWS0HwQ&q=watermelon&oq=waterme&aqs=chrome.1.69i57j46i433i512j0i433i512j46i433i512j0i512l2j0i433i512j0i512j0i433i512j0i271.2609j0j7&sourceid=chrome&ie=UTF-8">Watermelon Google</a></li>
     </ul>
 
 </body>
