--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
         </p>
     </div>
 
-    <p>
+    <p class="mainp">
         As you may know, watermelon is amazing. Watermelon holds many health benefits as well as just tasting plain awesome!
     </p>
 
+    <a href="photo_gallery.html" class="link">The Photo Gallery!</a>
+    <br />
+    <br />
+
     <ul>
-        <li class="link"><a href="https://en.wikipedia.org/wiki/Watermelon">Watermelon Wiki</a></li>
-        <li class="link"><a href="https://www.webmd.com/diet/ss/slideshow-health-benefits-of-watermelon">Watermelon WebMD</a></li>
-        <li class="link"><a href="https://www.google.com/search?gs_ssp=eJzj4tDP1TfILihMMWB0YPDiKk8sSS3KTc3JzwMAWS0HwQ&q=watermelon&oq=waterme&aqs=chrome.1.69i57j46i433i512j0i433i512j46i433i512j0i512l2j0i433i512j0i512j0i433i512j0i271.2609j0j7&sourceid=chrome&ie=UTF-8">Watermelon Google</a></li>
+        <li class="bottom_3_links"><a href="https://en.wikipedia.org/wiki/Watermelon">Watermelon Wiki</a></li>
+        <li class="bottom_3_links"><a href="https://www.webmd.com/diet/ss/slideshow-health-benefits-of-watermelon">Watermelon WebMD</a></li>
+        <li class="bottom_3_links"><a href="https://www.google.com/search?gs_ssp=eJzj4tDP1TfILihMMWB0YPDiKk8sSS3KTc3JzwMAWS0HwQ&q=watermelon&oq=waterme&aqs=chrome.1.69i57j46i433i512j0i433i512j46i433i512j0i512l2j0i433i512j0i512j0i433i512j0i271.2609j0j7&sourceid=chrome&ie=UTF-8">Watermelon Google</a></li>
     </ul>
 
 </body>
